# ecb_emu

./: CMakeLists.txt  README.md  plot_pc.py  program.hex  rtx.hex  run.sh
.github/workflows/: cmake-ubuntu.yml
Tester/: CMakeLists.txt  TestCPU.cpp  TestCPU.h  Tester.cpp  Tester.h  config.h  main.cpp
Tester/Binutils/: CMakeLists.txt
